--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -4,27 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client</title>
+    <title>My Application</title>
+    <style>
+        /* Optional: Add some basic styling */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Client</h1>
-    <form>
-        <div class="inputGroup">
-            <div class="group">
-                <label for="firstInput">First input: </label>
-                <input type="number" id="firstInput" class="form-first-input">
-            </div>
-            <div class="group">
-                <label for="secondInput">Second input: </label>
-                <input type="number" id="SecondInput" class="form-second-input">
-            </div>
-            <div class="group">
-                <label for="thirdInput">Third input: </label>
-                <input type="number" id="thirdInput" class="form-third-input">
-            </div>
-        </div>
-    </form>
+    <h1>It works!</h1>
+    <script src="client.js"></script>
 </body>
 
 </html>
