--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Application</title>
     <style>
-        /* Optional: Add some basic styling */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Cascadia Code', sans-serif;
             text-align: center;
             margin-top: 50px;
         }
