--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -25,7 +25,7 @@
             <img src="https://placehold.co/200x200" alt="Option 2">
         </label>
         <label>
-            <input type="radio" name="name" value="WomenBike">
+            <input type="radio" name="name" value="OneWheeler">
             <img src="https://placehold.co/200x200" alt="Option 3">
         </label>
         <br>
@@ -44,7 +44,7 @@
             const selectedModel = document.querySelector('input[name="name"]:checked').value;
             const data = { model: selectedModel };
 
-            fetch('/submit-order', {
+            fetch('http://localhost:8080/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
